Cleaned up the interface a bit and added humidity and feels like temperature. Also set up git to track changes. Made the font color for the transit links reflect the status. Put in a check to get rid of the link if there is no text to show on the transit status.

--- a/index.html
+++ b/index.html
@@ -26,62 +26,67 @@
 			<div class="row">
 				<div class="small-6 columns">
 					<img id="weather-icon" src="" />
-					<h1 id="temperature"></h1>
-					<p id="current-weather"></p>
-					<p id="weather-update-time"></p>
+					<h1 id="temperature">N/A</h1>
+					<p id="current-weather">N/A</p>
+					<p id="humidity-feel">N/A</p>
 				</div>
 				<div class="small-6 columns">
 					<div class="row forecast-header hide-for-small">
 						<div class="small-6 columns">
-							<span id="todays-day"></span>
+							<span id="todays-day">N/A</span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="small-3 columns short-day">
-							<p id="todays-day-short"></p>
+							<p id="todays-day-short">N/A</p>
 						</div>
 						<div class="small-5 columns">
 							<img id="todays-icon" src="" />
 						</div>
 						<div class="small-4 columns forecast">
-							<p id="todays-forecast" class="hide-for-small"></p>
-							<p id="todays-forecast-short" class="show-for-small"></p>
+							<p id="todays-forecast" class="hide-for-small">N/A</p>
+							<p id="todays-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
 					<div class="row forecast-header hide-for-small">
 						<div class="small-12 columns">
-							<span id="tonights-day"></span>
+							<span id="tonights-day">N/A</span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="small-3 columns short-day">
-							<p id="tonights-day-short"></p>
+							<p id="tonights-day-short">N/A</p>
 						</div>
 						<div class="small-5 columns">
 							<img id="tonights-icon" src="" />
 						</div>
 						<div class="small-4 columns forecast">
-							<p id="tonights-forecast" class="hide-for-small"></p>
-							<p id="tonights-forecast-short" class="show-for-small"></p>
+							<p id="tonights-forecast" class="hide-for-small">N/A</p>
+							<p id="tonights-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
 					<div class="row forecast-header hide-for-small">
 						<div class="small-12 columns">
-							<span id="tomorrows-day"></span>
+							<span id="tomorrows-day">N/A</span>
 						</div>
 					</div>
 					<div class="row">
 						<div class="small-3 columns short-day">
-							<p id="tomorrows-day-short"></p>
+							<p id="tomorrows-day-short">N/A</p>
 						</div>
 						<div class="small-5 columns">
 							<img id="tomorrows-icon" src="" />
 						</div>
 						<div class="small-4 columns forecast">
-							<p id="tomorrows-forecast" class="hide-for-small"></p>
-							<p id="tomorrows-forecast-short" class="show-for-small"></p>
+							<p id="tomorrows-forecast" class="hide-for-small">N/A</p>
+							<p id="tomorrows-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					<p id="weather-update-time">N/A</p>
 				</div>
 			</div>
 		</div>
@@ -91,20 +96,24 @@
 					<table>
 						<tbody>
 							<tr>
-								<td id="123-icon"><img width="1" height="1" src="img/trans.gif" class="subwayIcon123"></td>
-								<td><a href="#" id="123-status" onClick="show123Text();">#</a></td>
+								<td><img width="1" height="1" src="img/trans.gif" id="123-icon" class="subwayIcon123"></td>
+								<td><a id="123-status" onClick="">N/A</a></td>
 							</tr>
 							<tr>
-								<td id="BDFM-icon"><img width="1" height="1" src="img/trans.gif" class="subwayIconBDFM"></td>
-								<td><a href="#" id="BDFM-status" onClick="showBDFMText();">#</a></td>
+								<td><img width="1" height="1" src="img/trans.gif" id="BDFM-icon" class="subwayIconBDFM"></td>
+								<td><a id="BDFM-status" onClick="showBDFMText();">N/A</a></td>
 							</tr>
 							<tr>
-								<td id="NQR-icon"><img width="1" height="1" src="img/trans.gif" class="subwayIconNQR"></td>
-								<td><a href="#" id="NQR-status" onClick="showNQRText();">#</a></td>
+								<td><img width="1" height="1" src="img/trans.gif" id="NQR-icon" class="subwayIconNQR"></td>
+								<td><a id="NQR-status" onClick="showNQRText();">N/A</a></td>
 							</tr>
 						</tbody>
 					</table>
-					<span id="transit-update-time"></span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					<p id="transit-update-time">N/A</p>
 				</div>
 			</div>
 		</div>
