Use hourly forecast for better small forecast. Get rid of long winded forecasts in large mode.

--- a/index.html
+++ b/index.html
@@ -31,55 +31,40 @@
 					<p id="humidity-feel">N/A</p>
 				</div>
 				<div class="small-6 columns">
-					<div class="row forecast-header hide-for-small">
-						<div class="small-6 columns">
-							<span id="todays-day">N/A</span>
+					<div class="row">
+						<div class="small-3 columns short-day">
+							<p id="first-day-short">N/A</p>
+						</div>
+						<div class="small-5 columns">
+							<img id="first-icon" src="" />
+						</div>
+						<div class="small-4 columns forecast">
+							<p id="first-forecast" class="hide-for-small">N/A</p>
+							<p id="first-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="small-3 columns short-day">
-							<p id="todays-day-short">N/A</p>
+							<p id="second-day-short">N/A</p>
 						</div>
 						<div class="small-5 columns">
-							<img id="todays-icon" src="" />
+							<img id="second-icon" src="" />
 						</div>
 						<div class="small-4 columns forecast">
-							<p id="todays-forecast" class="hide-for-small">N/A</p>
-							<p id="todays-forecast-short" class="show-for-small">N/A</p>
-						</div>
-					</div>
-					<div class="row forecast-header hide-for-small">
-						<div class="small-12 columns">
-							<span id="tonights-day">N/A</span>
+							<p id="second-forecast" class="hide-for-small">N/A</p>
+							<p id="second-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="small-3 columns short-day">
-							<p id="tonights-day-short">N/A</p>
+							<p id="third-day-short">N/A</p>
 						</div>
 						<div class="small-5 columns">
-							<img id="tonights-icon" src="" />
+							<img id="third-icon" src="" />
 						</div>
 						<div class="small-4 columns forecast">
-							<p id="tonights-forecast" class="hide-for-small">N/A</p>
-							<p id="tonights-forecast-short" class="show-for-small">N/A</p>
-						</div>
-					</div>
-					<div class="row forecast-header hide-for-small">
-						<div class="small-12 columns">
-							<span id="tomorrows-day">N/A</span>
-						</div>
-					</div>
-					<div class="row">
-						<div class="small-3 columns short-day">
-							<p id="tomorrows-day-short">N/A</p>
-						</div>
-						<div class="small-5 columns">
-							<img id="tomorrows-icon" src="" />
-						</div>
-						<div class="small-4 columns forecast">
-							<p id="tomorrows-forecast" class="hide-for-small">N/A</p>
-							<p id="tomorrows-forecast-short" class="show-for-small">N/A</p>
+							<p id="third-forecast" class="hide-for-small">N/A</p>
+							<p id="third-forecast-short" class="show-for-small">N/A</p>
 						</div>
 					</div>
 				</div>
