--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Good Morning Display</title>
 
-  
+
   <link rel="stylesheet" href="css/foundation.css" />
   <link rel="stylesheet" href="css/app.css" />
   <link rel="stylesheet" href="css/general_foundicons.css" />
-  
+
 
   <script src="js/vendor/custom.modernizr.js"></script>
 
@@ -80,7 +80,7 @@
 				<div class="small-11 small-centered columns" id="transit-status">
 					<table id="transit-table">
 						<tbody>
-							
+
 						</tbody>
 					</table>
 				</div>
@@ -106,45 +106,45 @@
   ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
   '.js><\/script>')
   </script>
-  
+
   <script src="js/foundation.min.js"></script>
 
   <!--
-  
+
   <script src="js/foundation/foundation.js"></script>
-  
+
   <script src="js/foundation/foundation.alerts.js"></script>
-  
+
   <script src="js/foundation/foundation.clearing.js"></script>
-  
+
   <script src="js/foundation/foundation.cookie.js"></script>
-  
+
   <script src="js/foundation/foundation.dropdown.js"></script>
-  
+
   <script src="js/foundation/foundation.forms.js"></script>
-  
+
   <script src="js/foundation/foundation.joyride.js"></script>
-  
+
   <script src="js/foundation/foundation.magellan.js"></script>
-  
+
   <script src="js/foundation/foundation.orbit.js"></script>
-  
+
   <script src="js/foundation/foundation.reveal.js"></script>
-  
+
   <script src="js/foundation/foundation.section.js"></script>
-  
+
   <script src="js/foundation/foundation.tooltips.js"></script>
-  
+
   <script src="js/foundation/foundation.topbar.js"></script>
-  
+
   <script src="js/foundation/foundation.interchange.js"></script>
-  
+
   <script src="js/foundation/foundation.placeholder.js"></script>
-  
+
   <script src="js/foundation/foundation.abide.js"></script>
-  
+
   -->
-  
+
   <script>
     $(document).foundation();
   </script>
@@ -179,6 +179,7 @@
 					<label for="NQR"><input type="checkbox" id="NQR" name="transitLines[]" value="NQR"> NQR</label>
 					<label for="S"><input type="checkbox" id="S" name="transitLines[]" value="S"> S</label>
 					<label for="SIR"><input type="checkbox" id="SIR" name="transitLines[]" value="SIR"> SIR</label>
+          <label for="NJT158"><input type="checkbox" id="NJT158" name="transitLines[]" value="NJT158"> 158 Bus</label>
 				</div>
 			</fieldset>
 		</form>
@@ -195,7 +196,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="transit-status-text">
 	</div>
 	<script src="js/app.js" type="text/javascript"></script>
