Add new settings icon.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   			<h6 class="subheader">Good Morning Display</h5>
   		</div>
   		<div id="settings-container" class="small-4 columns">
-  			<a href="#" id="settings-button" onClick="showSettings()"><i class="foundicon-settings"></i></a>
+  			<a href="#" id="settings-button" onClick="showSettings()"><img src="img/settings-icon.png" /></a>
   		</div>
   	</div>
     <div id="settings" class="reveal-modal">
