--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
   			<a href="#" id="settings-button" onClick="showSettings()"><img src="img/settings-icon.png" /></a>
   		</div>
   	</div>
-    <div id="settings" class="reveal-modal">
+
+    <div id="settings" class="reveal-modal" data-reveal>
+      <a class="close-reveal-modal">&#215;</a>
   		<h2>Settings</h2>
   		<form id="settings-form" class="custom" data-abide>
   			<fieldset>
@@ -161,5 +163,6 @@
       $(document).foundation();
     </script>
     <script src="js/app.js" type="text/javascript"></script>
+
   </body>
 </html>
