--- a/index.html
+++ b/index.html
@@ -147,11 +147,17 @@
   	<div id="transit-status-text">
   	</div>
 
+    <div id="container">
+      <!-- React test container. -->
+    </div>
+
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
       $(document).foundation();
     </script>
+    <script src="https://fb.me/react-0.14.3.js"></script>
+    <script src="https://fb.me/react-dom-0.14.3.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 
   </body>
