--- a/reactexp.html
+++ b/reactexp.html
@@ -8,10 +8,27 @@
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/vendor/modernizr.js"></script>
+    <script src="https://fb.me/react-0.14.3.js"></script>
+    <script src="https://fb.me/react-dom-0.14.3.js"></script>
   </head>
   <body>
 
-    
+    <div id="container">
+      <!-- React test container. -->
+    </div>
+
+    <script>
+      var Hello = React.createClass({displayName: 'Hello',
+          render: function() {
+              return React.createElement("div", null, "Hello ", this.props.name);
+          }
+      });
+
+      ReactDOM.render(
+          React.createElement(Hello, {name: "Universe!!!"}),
+          document.getElementById('container')
+      );
+    </script>
 
   </body>
 </html>
