--- a/reactexp.html
+++ b/reactexp.html
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/vendor/modernizr.js"></script>
-    <script src="https://fb.me/react-0.14.3.js"></script>
-    <script src="https://fb.me/react-dom-0.14.3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="js/vendor/jquery.js"></script>
   </head>
   <body>
-
-    <div id="container">
-      <!-- React test container. -->
-    </div>
 
     <div class="row">
   		<div id="weather-container" class="small-12 columns">
@@ -36,22 +32,51 @@
 
     <script type="text/babel">
       var CurrentWeather = React.createClass({
+        loadWeatherFromServer: function() {
+          $.ajax({
+            url: this.props.url,
+            dataType: 'json',
+            cache: false,
+            success: function(data) {
+              this.setState({data: data});
+            }.bind(this),
+            error: function(xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+        getInitialState: function() {
+          return {data: []};
+        },
+        componentDidMount: function() {
+          this.loadWeatherFromServer();
+          setInterval(this.loadWeatherFromServer, this.props.pollInterval);
+        },
         render: function() {
           return (
-            <div>
-              <img id="weather-icon" src={this.props.weather.icon} />
-              <h1 id="temperature">{this.props.weather.temp}</h1>
-              <p id="current-weather">{this.props.weather.conditions}</p>
-              <p id="humidity-feel">{this.props.weather.feel}</p>
+            <div className="currentWeather">
+              <img id="weather-icon" src="" />
+              <CurrentTemp data={this.state.data} />
+              <p id="current-weather"></p>
+              <p id="humidity-feel"></p>
             </div>
           );
         }
       });
 
-      var data = {temp: "90", icon: "http://icons.wxug.com/i/c/j/clear.gif", conditions: 'Mildly froggy', feel: 'feels like 20º'};
+      var CurrentTemp = React.createClass({
+        render: function() {
+          return (
+            <div>
+              <h1 id="temperature">{this.props.data.current_observation.temp_f}</h1>
+            </div>
+          );
+        }
+      });
 
+      var weatherAPI = "http://api.wunderground.com/api/1197e676c4b523c6/conditions/forecast/hourly/q/11238.json";
       ReactDOM.render(
-          <CurrentWeather weather={data} />,
+          <CurrentWeather url={weatherAPI} pollInterval={600000}/>,
           document.getElementById('current-weather')
       );
     </script>
