Watch and browsersync, remove unused requires

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>React Test</title>
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="build/css/app.css">
   <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
 </head>
 <body>
   <div id="main">
     <!-- This is where our React app will go -->
   </div>
-  <script src="scripts/main.js"></script>
+  <script src="build/scripts/main.js"></script>
 </body>
 </html>
