--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React Test</title>
+  <title>React Weather</title>
   <link rel="stylesheet" href="build/css/app.css">
-  <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
 </head>
 <body>
   <div id="main">
