Start adding Foundation and styling back in

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>React Weather</title>
+  <link rel="stylesheet" href="build/css/foundation.min.css" />
   <link rel="stylesheet" href="build/css/app.css">
+  <script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
   <div id="main">
     <!-- This is where our React app will go -->
   </div>
+  <script src="build/scripts/vendor/jquery.js"></script>
+  <script src="build/scripts/foundation.min.js"></script>
   <script src="build/scripts/main.js"></script>
 </body>
 </html>
