--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>React Weather</title>
-  <link rel="stylesheet" href="build/css/app.css">
+  <link rel="stylesheet" href="build/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id="main">
