--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>React Weather</title>
   <link rel="stylesheet" href="build/css/style.css">
+  <link rel="stylesheet" href="build/css/mta-colors.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
