--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React Weather</title>
+  <title>Good Morning Display</title>
   <link rel="stylesheet" href="build/css/style.css">
   <link rel="stylesheet" href="build/css/mta-colors.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
