Add iPhone specific meta tags. Update readme.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="build/css/style.css">
   <link rel="stylesheet" href="build/css/mta-colors.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-moblie-web-status-bar-style" content="black-translucent">
 </head>
 <body>
   <div id="main">
