Fix a couple issues in the style syntax

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                 border: 2px solid #ffffff;
                 height: 192px;
                 width: 192px;
-                border-radius: 50%
-                -moz-border-radius:50%;
-                -webkit-border-radius:50%;
+                border-radius: 50%;
                 margin-left: 32px;
                 display: flex;
                 align-items: center;
@@ -56,9 +54,7 @@
                 border: 2px solid #ffffff;
                 height: 192px;
                 width: 192px;
-                border-radius: 50%
-                -moz-border-radius:50%;
-                -webkit-border-radius:50%;
+                border-radius: 50%;
                 margin-left: 32px;
                 display: flex;
                 align-items: center;
@@ -93,7 +89,6 @@
                 margin: auto;
                 text-align: center;
             }
-
         </style>
     </head>
     <body>
