--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://momentjs.com/downloads/moment.js"></script>
         <style>
             body {
                 font-family: 'Roboto', sans-serif;
@@ -213,8 +214,7 @@
                     $("#forecast > #f3").html(data.properties.periods[2].shortForecast)
                 })
                 
-                updateTime = new Date(Date.now())
-                $("#update-time > p").html(updateTime.getHours() + ":" + updateTime.getMinutes())
+                $("#update-time > p").html(moment().format("HH:mm"))
             }
 
             $( document ).ready(function() {
