--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 font-weight: 100;
                 font-size: 16px;
                 line-height: 16px;
+                max-width: 155px;
                 margin: 0;
             }
 
