--- a/index.html
+++ b/index.html
@@ -11,19 +11,16 @@
         <style>
             body {
                 font-family: 'Roboto', sans-serif;
-                margin: 0;
-                padding: 0;
             }
 
             #container {
                 width: 800px;
                 height: 480px;
+                /* width: 100vw;
+                height: 100vh; */
                 background-color: #000000;
                 color: #ffffff;
                 overflow: auto;
-                display: grid;
-                grid-template-columns: 260px 1fr;
-                grid-template-rows: 32px 192px 32px 192px 32px;
             }
 
             .big-number {
@@ -41,16 +38,19 @@
                 margin: 0;
             }
 
+            #current-conditions {
+                float: left;
+            }
+
             #temperature {
                 border: 2px solid #ffffff;
                 height: 192px;
                 width: 192px;
                 border-radius: 50%;
                 margin-left: 32px;
+                margin-top: 32px;
                 display: flex;
                 align-items: center;
-                grid-column: 1;
-                grid-row: 2;
             }
 
             #wind {
@@ -59,16 +59,16 @@
                 width: 192px;
                 border-radius: 50%;
                 margin-left: 32px;
+                margin-top: 24px;
+                margin-bottom: 32px;
                 display: flex;
                 align-items: center;
-                grid-column: 1;
-                grid-row: 4;
             }
 
             #forecast {
                 padding: 0 32px;
-                grid-column: 2;
-                grid-row: 2 / 5;
+                margin-top: 32px;
+                margin-left: 256px;
             }
 
             p.error {
@@ -81,16 +81,20 @@
             }
 
             #update-time {
-                grid-column: 2;
-                grid-row: 5;
+                width: 40px;
+                height: 15px;
                 text-align: right;
+                position: absolute;
+                top: 457px;
+                left: 752px;
             }
 
             #update-time p {
-                margin: 12px 8px 0 0;
                 color: #6f6f6f;
                 font-weight: 100;
                 font-size: 12px;
+                text-align: right;
+                margin: 0;
             }
 
             #forecast h2 {
@@ -262,16 +266,18 @@
     </head>
     <body>
         <div id="container">
-            <div id="temperature">
-                <div class="inner">
-                    <p class="big-number"></p>
-                    <p class="big-label"></p>
+            <div id="current-conditions">
+                <div id="temperature">
+                    <div class="inner">
+                        <p class="big-number"></p>
+                        <p class="big-label"></p>
+                    </div>
                 </div>
-            </div>
-            <div id="wind">
-                <div class="inner">
-                    <p class="big-number"></p>
-                    <p class="big-label"></p>
+                <div id="wind">
+                    <div class="inner">
+                        <p class="big-number"></p>
+                        <p class="big-label"></p>
+                    </div>
                 </div>
             </div>
             <div id="forecast">
